# tl0

./: .gitignore  LICENSE  README.md  pyproject.toml  tl0.example.json  tl0.sh  tl0h.sh  tl0m.sh
claude/commands/: dependency-audit-all.md  dependency-audit.md  review-tasks.md  task-loop-reset.md  task.md
claude/prompts/: execute-task.md
templates/: TASKS.md
tests/: conftest.py  test_cli_enforcement.py  test_common.py  test_lifecycle.py
tl0/: __init__.py  __main__.py  cli.py  cli_human.py  cli_machine.py  common.py  config.py  index.py  schema.json
tl0/analysis/: apply_deps.py  build_catalog.py  reset_for_execution.py
tl0/commands/: archive.py  claim.py  complete.py  create.py  delete.py  fail.py  find_ready.py  free.py  free_all.py  index_cmd.py  index_notify.py  reset.py  reset_failed.py  reset_quota_errors.py  shared_modal.py  show.py  status.py  supervisor.py  trace.py  transcript.py  update.py  validate.py  viewer.py
tl0/loop/: task_loop.sh
